# Xmem

./: .gitignore  DOCKER_DEPLOY.md  ENV_TROUBLESHOOTING.md  HTTPS_MANUAL_SETUP.md  HTTPS_QUICKSTART.md  HTTPS_SETUP.md  LICENSE  README.md  README_HTTPS.md  diagnose-cert.sh  docker-compose.yml  enable-https.sh  fix-and-get-cert.sh  fix-certbot-path.sh  get-cert-simple.sh  init-cert.sh  reset-https.sh  run-backend.ps1  run-backend.sh  run-frontend.ps1  run-frontend.sh  todo_list.md
backend/: Dockerfile  check_celery_setup.py  ensure_db.py  generate_fake_ledger_data.py  init_db.py  pyproject.toml  pytest.ini  requirements.txt  run-celery.ps1  run-celery.sh  test_celery.py
backend/alembic/: env.py
backend/alembic/versions/: 28815a67cab2_add_group_to_todos.py  2f840e72ac66_remove_redundant_columns.py  4c9d8e7f1b2a_remove_attachment_url.py  6ca923627246_add_todo_group_support.py  804102a61f46_add_files_table.py  9ca5c4231ab8_add_is_pinned_to_notes.py  9f82752ac1ea_remove_body_field_and_make_body_md_.py  add_is_pinned_to_todos.py  add_status_task_id_to_ledger_entry.py  eefce5d67f7b_add_user_name_field.py  (+1 more)
backend/app/: auth.py  celery_app.py  config.py  constants.py  db.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  ledger.py  (+2 more)
backend/test/: README.md  README_LEDGER_TESTS.md  TEST_SUMMARY.md  conftest.py  test_auth_api.py  test_auth_integration.py  test_file_management.py  test_ledger_api.py  test_ledger_integration.py  test_ledger_tasks.py  test_notes_api.py  test_notes_integration.py  test_ocr.py  test_todos_api.py  test_todos_integration.py
(+165 files in other folders)
